// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should display correctly with expenses 1`] = `
<div>
  <p>
    Viewing 
    5
     
    expenses
  </p>
  <p>
    Totaling 
    $3.46
  </p>
</div>
`;

exports[`Should display correctly without expenses 1`] = `
<div>
  <p>
    Viewing 
     
    expenses
  </p>
  <p>
    Totaling 
    $0.00
  </p>
</div>
`;
